src/test/deca/context/valid/test_oparith_float_addition.deca
// Description:
//    affectation et operation arith reussis
//
// Resultats:
//    a = 11.0
//
// Historique:
//    cree le 01/01/2024

{
   float a = 1.9 + 9.1 ;
}
